projects/vb6parse/snapshots/syntax/statements/string_manipulation/rset/rset_with_ucase.snap
---
source: projects/vb6parse/src/syntax/statements/string_manipulation/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RSetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RSetKeyword
                  text: RSet
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: result
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: UCase$
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: InputKeyword
                                      text: input
                        - kind: RightParenthesis
                          text: )
                - kind: IdentifierExpression
                  children:
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
